# webuild

./: CONTRIBUTING.md  Cargo.toml  README.md  WEBUILD_README.md  clippy.toml
.github/workflows/: release.yml
crates/codegen/xai-acp-lib/src/: normalize.rs  stdin_reader.rs
crates/codegen/xai-agent-lifecycle/src/: lib.rs
crates/codegen/xai-chat-state/: Cargo.toml
crates/codegen/xai-chat-state/src/: commands.rs  compaction_mode.rs  compaction_transcript.rs  compaction_utils.rs  conversation_util.rs  handle.rs  lib.rs  persistence.rs  types.rs  usage.rs
crates/codegen/xai-codebase-graph/: Cargo.toml
crates/codegen/xai-codebase-graph/src/: index_manager.rs
crates/codegen/xai-crash-handler/src/: handler.rs  lib.rs  symbolicate.rs
crates/codegen/xai-fast-worktree/src/: api.rs  discovery.rs  lib.rs  mount_info.rs
crates/codegen/xai-file-utils/: Cargo.toml
crates/codegen/xai-file-utils/src/: gcs.rs  lib.rs  queue.rs  s3.rs  storage_client.rs  workspace_classifier.rs
crates/codegen/xai-fsnotify/benches/: startup.rs
crates/codegen/xai-fsnotify/examples/: watch_stats.rs
crates/codegen/xai-fsnotify/src/: event.rs  lib.rs  source.rs  watcher.rs
crates/codegen/xai-gix-status/src/: lib.rs
crates/codegen/xai-hooks-plugins-types/src/: lib.rs
crates/codegen/xai-hunk-tracker/src/: lib.rs
crates/codegen/xai-mixpanel/: Cargo.toml
crates/codegen/xai-mixpanel/src/: lib.rs
crates/codegen/xai-prompt-queue/: Cargo.toml
crates/codegen/xai-prompt-queue/src/: lib.rs
crates/codegen/xai-ratatui-textarea/: NOTICE
crates/codegen/xai-sqlite-journal/: Cargo.toml
crates/codegen/xai-sqlite-journal/src/: lib.rs
crates/codegen/xai-system-power/src/: lib.rs  linux.rs
crates/codegen/xai-webuild-agent/: Cargo.toml  README.md
crates/codegen/xai-webuild-agent/src/: agent.rs  builder.rs  config.rs  discovery.rs  lib.rs  repo.rs  system_reminder.rs  timing.rs
crates/codegen/xai-webuild-agent/templates/: apply_patch_prompt.md  prompt.md  subagent_prompt.md
crates/codegen/xai-webuild-announcements/: Cargo.toml  generate.sh
crates/codegen/xai-webuild-announcements/src/: lib.rs
crates/codegen/xai-webuild-auth/: Cargo.toml
crates/codegen/xai-webuild-auth/src/: auth_provider.rs  lib.rs  visibility.rs
crates/codegen/xai-webuild-config/: Cargo.toml
crates/codegen/xai-webuild-config-types/: Cargo.toml
crates/codegen/xai-webuild-config-types/src/: flags.rs  lib.rs  mcp.rs  memory.rs  permission.rs  pool.rs
crates/codegen/xai-webuild-config/src/: lib.rs  loader.rs  macos_managed.rs  managed_cache.rs  paths.rs  shell.rs  signed_policy.rs  validation.rs
crates/codegen/xai-webuild-env/: Cargo.toml
crates/codegen/xai-webuild-env/src/: lib.rs
crates/codegen/xai-webuild-hooks/: Cargo.toml
crates/codegen/xai-webuild-hooks/examples/: README.md
crates/codegen/xai-webuild-hooks/src/: config.rs  discovery.rs  dispatcher.rs  env_expand.rs  lib.rs  matcher.rs  test_support.rs  trust.rs
crates/codegen/xai-webuild-hooks/tests/: integration.rs
crates/codegen/xai-webuild-http/: Cargo.toml
crates/codegen/xai-webuild-http/src/: lib.rs
crates/codegen/xai-webuild-markdown/: Cargo.toml
crates/codegen/xai-webuild-markdown-core/: Cargo.toml
crates/codegen/xai-webuild-markdown-core/src/: lib.rs
crates/codegen/xai-webuild-markdown/benches/: bench.rs
crates/codegen/xai-webuild-markdown/fuzz/: Cargo.toml  README.md
crates/codegen/xai-webuild-markdown/src/: lib.rs  parse.rs  syntax.rs
crates/codegen/xai-webuild-mcp/: Cargo.toml
crates/codegen/xai-webuild-mcp/src/: acp_transport.rs  credentials.rs  lib.rs  mcp_http_client.rs  oauth.rs  servers.rs
crates/codegen/xai-webuild-mcp/tests/: repro_sse_flood.rs
crates/codegen/xai-webuild-memory/: Cargo.toml
crates/codegen/xai-webuild-memory/src/: backend.rs  chunker.rs  dream.rs  embedding.rs  index.rs  lib.rs  mmr.rs  search.rs  storage.rs  watcher.rs
crates/codegen/xai-webuild-mermaid/: Cargo.toml
crates/codegen/xai-webuild-mermaid/assets/: Roboto-LICENSE.txt
crates/codegen/xai-webuild-mermaid/src/: lib.rs
crates/codegen/xai-webuild-models/: Cargo.toml  default_models.json
crates/codegen/xai-webuild-pager/: Cargo.toml  README.md  build.rs
crates/codegen/xai-webuild-pager-bin/: Cargo.toml
crates/codegen/xai-webuild-pager-bin/src/: main.rs
crates/codegen/xai-webuild-pager-minimal/: Cargo.toml
crates/codegen/xai-webuild-pager-pty-harness/: Cargo.toml
crates/codegen/xai-webuild-pager-render/: Cargo.toml
crates/codegen/xai-webuild-paths/: Cargo.toml
crates/codegen/xai-webuild-plugin-marketplace/: Cargo.toml
crates/codegen/xai-webuild-sampler/: Cargo.toml
crates/codegen/xai-webuild-sampling-types/: Cargo.toml
crates/codegen/xai-webuild-sandbox/: Cargo.toml
crates/codegen/xai-webuild-secrets/: Cargo.toml
crates/codegen/xai-webuild-shared/: Cargo.toml
crates/codegen/xai-webuild-shell/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/codegen/xai-webuild-shell-base/: Cargo.toml
crates/codegen/xai-webuild-shell-session-support/: Cargo.toml
crates/codegen/xai-webuild-shell-session-support/src/: lib.rs  managed_mcp.rs
crates/codegen/xai-webuild-subagent-resolution/: Cargo.toml
crates/codegen/xai-webuild-subagent-resolution/src/: config.rs  context.rs  lib.rs  overrides.rs  resume.rs
crates/codegen/xai-webuild-telemetry/: Cargo.toml
crates/codegen/xai-webuild-test-support/: Cargo.toml  README.md
crates/codegen/xai-webuild-tools/: Cargo.toml  THIRD_PARTY_NOTICES.md  build.rs
crates/codegen/xai-webuild-tools-api/: Cargo.toml  build.rs
crates/codegen/xai-webuild-update/: Cargo.toml
crates/codegen/xai-webuild-version/: Cargo.toml  build.rs
crates/codegen/xai-webuild-voice/: Cargo.toml
crates/codegen/xai-webuild-workspace/: Cargo.toml
crates/codegen/xai-webuild-workspace-client/: Cargo.toml
crates/codegen/xai-webuild-workspace-types/: Cargo.toml
crates/common/xai-tool-runtime/: Cargo.toml
crates/common/xai-webuild-compaction/: Cargo.toml
prod/mc/cli-chat-proxy-types/: Cargo.toml
scripts/: install.sh  rename_grok_to_webuild.py
(+1318 files in other folders)
