[package]
license = "Apache-2.0"
name = "xai-webuild-config-types"
version = "0.1.0"
edition.workspace = true
description = "Leaf configuration value types for the webuild CLI, extracted from xai-webuild-shell for dependency inversion."

[dependencies]
agent-client-protocol = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
xai-webuild-announcements = { workspace = true }
xai-webuild-config = { workspace = true }
xai-webuild-mcp = { workspace = true }

[features]
default-bazel = []

[lints]
workspace = true
